--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<button type="button" id="btn" class="b">Submit button</button>
+	<button type="submit" id="btn" class="b">Submit button</button>
 
 </body>
 
